sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:19: error: 'while' expected but '}' found.
  }while (ecart >=1 || echange==false)
  ^AlgCombSort:19: error: ';' expected but 'while' found.
  }while (ecart >=1 || echange==false)
   ^AlgCombSort:23: error: Unmatched closing brace '}' ignored here
}
^